feat: Enhance accounting module with Journal Audit and Fiscal Declaration features, and general refinements.